# memutil

./: .gitignore  CMakeLists.txt  README.md
headers/: memutil.h
sources/: memutil.c
tests/: test_memutil.c
